css/style.css
* {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

body{
    font-size: 12px;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    padding: 0;
    margin: 0;
}

h1{
    float: left;
    display: block;
    margin: 0;
    font-size:2.4em;
}

#navbar{
    padding: 2em 2.2em;
    border-bottom: 1px solid #ccc;
    background-color: #F9FDFF;
}

#app{
    position: relative;
    display: block;
    width: 100%;
}

.input-typeahead {
    width: 100%;
    margin: 0;
    font-size: 2em;
    padding-left: 0.5em;
    line-height: 2em;
    border-radius: 0;
}

.loading-icon{
    position: absolute;
    height: 2.5em;
    top: 0.9em;
    right: 1em;
}

ul.results{
    background-color: #fff;
    position: absolute;
    width: 100%;
    margin-top: 0;
    padding: 0;
    border: 1px solid #ccc;
    border-top: none;
    list-style-type: none;
}

ul.results.hide, ul.results.empty{
    display: none;
}

ul.results > li{
    line-height: 4em;
    padding: 0.5em 0 0.5em 1em;
    position: relative;
    cursor: pointer;
}

ul.results > li:hover{
    background-color: #FFFEE2;
}

ul.results > li:active{
    background-color: #FFFEE2;
}

ul.results > li > img{
    float: left;
    width: 4em;
    height: 4em;
}

ul.results.thumb-circle > li > img{
    border-radius: 4em;
}

ul.results > li > div{
     float: left;
    padding-left: 0.5em;
    font-size: 2em;

}



#grid img{
    float: left;
    width: 25%;
}

@media all and (max-width: 500px) {
    body {
        font-size: 10px;
    }
}


.clearfix:after {
     visibility: hidden;
     display: block;
     font-size: 0;
     content: " ";
     clear: both;
     height: 0;
}
.clearfix { display: inline-block; }
/* start commented backslash hack \*/
* html .clearfix { height: 1%; }
.clearfix { display: block; }
/* close commented backslash hack */

